--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -6,6 +6,7 @@
     "/css/dashboard.css": "/css/dashboard.css",
     "/css/gentelella-custom.css": "/css/gentelella-custom.css",
     "/js/gentelella-custom.js": "/js/gentelella-custom.js",
+    "/js/jquery.min.js": "/js/jquery.min.js",
     "/css/bootstrap.css": "/css/bootstrap.css",
     "/css/bootstrap.css.map": "/css/bootstrap.css.map",
     "/js/bootstrap.js": "/js/bootstrap.js",
@@ -17,7 +18,7 @@
     "/js/bootstrap-progressbar.js": "/js/bootstrap-progressbar.js",
     "/css/select2.css": "/css/select2.css",
     "/js/select2.full.js": "/js/select2.full.js",
-    "/js/jquery.js": "/js/jquery.js",
+    "/js/moment.js": "/js/moment.js",
     "/js/bootstrap-daterangepicker.js": "/js/bootstrap-daterangepicker.js",
     "/js/chart.js": "/js/chart.js",
     "/js/gauge.js": "/js/gauge.js",
